--- a/python/README
+++ b/python/README
@@ -1,4 +1,4 @@
 hmb.client module is in the httpmsgbus repository and is installed in
-~/seiscomp3/lib/python by default. Use PYTHONPATH=~/seiscomp3/lib/python
+~/seiscomp/lib/python by default. Use PYTHONPATH=~/seiscomp/lib/python
 
 Dependencies: python3-requests, python3-certifi, python3-pymongo.
